fix(desktop-ui): honest attach form when the attach CLI is absent
Address the independent review must-fix items on PR #12:

- Detect that this checkout has no `attach` subcommand (inspect the same
  main.py the run path would launch) and show an honest amber notice; keep
  Run disabled so the GUI never pretends the shown command works. Listen
  and the /proc pre-scan still work.
- Extract the tail/announce decision into AttachController.outcomeFor and
  test that a non-zero exit or a parsed refusal never tails and never
  claims attached (not only the showRefusal screenshot hook).
- Wire the allowAttachSelf=false warning into the form's refresh/pre-scan
  as a non-fatal warning line (not a hard refusal).
- Read bindingGaps from manifest.json (PR #4's source of truth), falling
  back to binary.json; keep format/arch/analysis from binary.json. Move
  the sample session's gap onto manifest.json to match that layout.
- Reflow the attach-form intro so words stay complete.

:desktop-ui:test now 52 tests (was 42).

Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>